src/k8s/ingress/cr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-redemption-ingress
  namespace: code-redemption
spec:
  ingressClassName: nginx
  rules:
    - host: api-coderedemption.azampay.co.tz
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
